# STAG-Information-Model-Manager

./: .clang-format  .clang-tidy  .do_release.sh  .gitignore  .gitlab-ci.yml  .hspt-cpp  .template_installer.sh  .update_versioning.sh  .valgrind_targets.json  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  Information_Model_ManagerConfig.cmake.in  README.md  ci-variables.yml  conanfile.py  conanfile.txt  information_access_manager-config.cmake
cmake/: dependencies.cmake  macros.cmake
conan/: conanfile.py
conan/test_package/: example.cpp
docs/manual/: adapter_management.md  main.md  model_implementation.md
includes/Builder/: DeviceBuilder.hpp  FunctionImplementation.hpp  ObservableMetricImplementation.hpp
includes/Building_And_Registration_Facade/: BuildingAndRegirtrationFacade.hpp
includes/Device_Builder/: DeviceBuilder.hpp  DeviceElementGroupImplementation.hpp  DeviceImplementation.hpp  DeviceImplementationBuilder.hpp  ElementMetaInfo.hpp  FunctionImplementation.hpp  MetricImplementation.hpp  WritableMetricImplementation.hpp
includes/Manager/: ModelManager.hpp
includes/Model/: Builder.hpp  CallableImpl.hpp  DeviceImpl.hpp  ElementImpl.hpp  FullMetaInfo.hpp  GroupImpl.hpp  ObservableImpl.hpp  ReadableImpl.hpp  WritableImpl.hpp
includes/Model_Factory/: DeviceBuilder.hpp  DeviceElementBuilder.hpp  DeviceElementGroupImpl.hpp  DeviceGroupBuilder.hpp  DeviceImpl.hpp  ReadableMetricImpl.hpp  WritableMetricImpl.hpp
includes/Model_Manager/: DeviceAssembler.hpp  ModelManager.hpp
includes/Model_Registry/: ModelRegistry.hpp  ModelRepository.hpp
includes/Registry/: ModelRepository.hpp
includes/Technology_Manager/: TechnologyManager.hpp
modules/Data_Consumer_Notifier-0.0.0-Linux/include/: Notifier.hpp
modules/Device_Building_And_Registration-0.0.0-Linux/: Device_Building_And_RegistrationTargets.cmake
modules/Device_Building_And_Registration-0.0.0-Linux/docs/html/: annotated.html  annotated_dup.js  classes.html  dir_05ead2081d904537b0dbf0b9655c3059.html  dir_09e761304027c904456130627fd4dcf5.html  dir_10ad6030466cccdab31ee9c7f972ccff.html  dir_2695464937ce4190884eb5b06b36e733.html  dir_3254e78a1afe2600b6853810b840d713.html  dir_4e19fdc26333904d0d3da8ebae510ad4.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5af68262393c6a69049b89a96ef38708.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7604561e2609812d479024e14bafcfd9.html  files.html  (+31 more)
modules/Device_Building_And_Registration-0.0.1-Linux/: README.md
modules/Device_Building_And_Registration-0.0.1-Linux/cmake/: Device_Building_And_RegistrationTargets.cmake
modules/Information_Modeler-0.0.0-Linux/include/: DeviceBuilder.hpp  DeviceElementGroupImpl.hpp  DeviceGroupBuilder.hpp  Listener.hpp  informationModelExceptions.hpp
modules/Information_Modeler-0.0.0-Linux/lib/: Information_Modeler.cmake
modules/Technology_Adapter_Interface-0.0.0-Linux/cmake/: Technology_Adapter_InterfaceConfig.cmake  Technology_Adapter_InterfaceTargets-debug.cmake  Technology_Adapter_InterfaceTargets.cmake
modules/Technology_Adapter_Interface-0.0.1-Linux/: README.md
modules/Technology_Adapter_Interface-0.0.1-Linux/cmake/: Technology_Adapter_InterfaceTargets-release.cmake  Technology_Adapter_InterfaceTargets.cmake
old/: FunctionImplementation.cpp  MetricImplementation.cpp  MetricImplementation.hpp  WritableMetricImplementation.hpp
sources/: CMakeLists.txt
sources/Builder/: CMakeLists.txt
sources/Building_And_Registration_Facade/: BuildingAndRegirtrationFacade.cpp  CMakeLists.txt
sources/Device_Builder/: CMakeLists.txt  DeviceBuilder.cpp  DeviceElementGroupImplementation.cpp  DeviceImplementation.cpp  DeviceImplementationBuilder.cpp  ElementMetaInfo.cpp  FunctionImplementation.cpp  MetricImplementation.cpp  ObservableMetricImplementation.cpp  WritableMetricImplementation.cpp
sources/Example/: CMakeLists.txt  main.cpp
sources/Manager/: CMakeLists.txt  ModelManager.cpp
sources/Model/: Builder.cpp  CMakeLists.txt  CallableImpl.cpp  DeviceImpl.cpp  ElementImpl.cpp  FullMetaInfo.cpp  GroupImpl.cpp  ObservableImpl.cpp  ReadableImpl.cpp  WritbleImpl.cpp
sources/Model_Factory/: CMakeLists.txt  DeviceBuilder.cpp  DeviceElementGroupImpl.cpp  DeviceImpl.cpp
sources/Model_Manager/: CMakeLists.txt  DeviceAssembler.cpp  ModelManager.cpp
sources/Model_Registry/: CMakeLists.txt  ModelRegistry.cpp  ModelRepository.cpp
sources/Registry/: CMakeLists.txt  ModelRepository.cpp
sources/Technology_Manager/: CMakeLists.txt  TechnologyManager.cpp
sources/runner/: CMakeLists.txt  main.cpp
test_package/: CMakeLists.txt  example.cpp
tests/builder_tests/: CMakeLists.txt  DeviceBuilderTests.cpp  DeviceTest.hpp  ElementDescriptionTest.hpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/builder_tests/: CMakeLists.txt  DeviceBuilderTests.cpp  DeviceElementGroupTest.cpp  DeviceElementGroupTest.hpp  DeviceElementTest.cpp  DeviceElementTest.hpp  ElementDescriptionTest.cpp  ElementNameTest.cpp  ElementNameTest.hpp  RefIDTest.cpp  RefIDTest.hpp  testRunner.cpp  testRunner.hpp
tests/unit_tests/builder_tests/DeviceBuilderTestSuite/: DeviceBuilderTests.cpp
tests/unit_tests/builder_tests/ModelImlementationTestSuite/: DeviceElementGroupTest.cpp  ElementDescriptionTest.cpp
unit_tests/: CMakeLists.txt  testRunner.cpp
unit_tests/Builder_Tests/: BuilderTests.cc
unit_tests/Device_Builder_Tests/: DeviceBuilderTests.cc
unit_tests/Device_Tests/: CallableTests.cc  DeviceElementSearchTests.cc  DeviceTests.cc  ElementTests.cc  FullMetaInfoTests.cc  GroupTests.cc  ObservableTests.cc  ReadableTests.cc  SimpleReadableDeviceTests.cc  SimpleWritableDeviceTests.cc  TestResources.hpp  WritableTests.cc
unit_tests/Manager_Tests/: ManagerTests.cc
unit_tests/Model_Event_Source_Tests/: ModelEventSourceTests.cc
unit_tests/Registry_Tests/: RepositoryTests.cc
unit_tests/builder_tests/DeviceBuilderTestSuite/: DeviceBuilderTestSuite.hpp  SingleElementDeviceTests.cc
unit_tests/builder_tests/ModelImlementationTestSuite/: DeviceElementGroupTest.cc  DeviceElementTest.cc  ElementNameTest.cc  ModelImplementantionTestSuite.hpp  RefIDTest.cc
(+453 files in other folders)
